2009-09-18  Murray Cumming  <murrayc@murrayc.com>

	Maemo: Use some Hildon widgets.
	
	* glom/utility_widgets/entryglom.[h|cc]:
	* glom/utility_widgets/textviewglom.h: Use Hildon::TextView and Hildon::Entry.

2009-09-18  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac: Add a full configure example for maemo in a comment, 
		to help my memory.
	* glom/dialog_import_csv.cc: Fix a typo to fix the build on maemo. 

2009-09-18  Murray Cumming  <murrayc@murrayc-desktop>

	CsvParser: Made some API private.

	* glom/dialog_import_csv.[h|cc]: get_field_for_column(): Return a 
	sharedptr<const>, not a silly const sharedptr<>&.
	* glom/dialog_import_csv_progress.cc:
	* glom/import_csv.[h|cc]: add get_state() and get_rows_count(). Make 
	some API private to make it clearer what needs to be done to make 
	this a real self-contained class.

2009-09-18  Murray Cumming  <murrayc@murrayc.com>

	CSV Import: Minor code style changes.

	* glom/dialog_import_csv.cc:
	* glom/dialog_import_csv_progress.cc:
	* glom/import_csv.[h]cc]: Prefix the state enum with STATE_. 
	Use 0 instead of NULL because this is C++. Remove some debug output.
	Make signal type and variable names consistent with other code.
	* tests/import/test_signals.cc: Add a last std::endl.

2009-09-18  Murray Cumming  <murrayc@murrayc.com>

	Tests: Stop using valgrind by default.

	* Makefile_tests.am: Do not run all tests under valgrind. valgrind is 
	for humans to read, and make check has no way to know if the result is 
	appopriate or not. Run things under valgrind when you want to.

2009-09-17  Michael Hasselmann <michaelh@openismus.com>

Refactoring Dialog_Import_CSV: created testcase for the CsvParser's signal emission
	
	* Makefile_tests.am: all tests now run within valgrind by default since mem
	leaks in testcases are potential mem leaks in the application. Parameters might
	need tweaking.
	
	* glom/import_csv.cc (CsvParser::on_idle_parse): Fixed a missing negation in a